# icepick

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_RELATIVE_PATHS.md  CHANGELOG.md  Cargo.toml  DEVELOPER.md  HIVE_PARTITION_EXTRACTION.md  ICEPICK_FEATURE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: CLI_IMPLEMENTATION_PLAN.md  PARTITION_PRUNING_PLAN.md  wasm-compatibility-status.md  wasm-status.md
docs/plans/: 2025-11-14-rust-iceberg-s3tables-design.md  2025-11-14-rust-iceberg-s3tables-implementation.md  2025-11-15-data-writing-arrow-iceberg-schema-mapping.md  2025-11-15-icepick-production-ready-design.md  2025-11-15-minimal-s3tables-client-design.md  2025-11-15-minimal-s3tables-client-implementation.md  2025-11-15-r2-data-catalog-design.md  2025-11-15-r2-data-catalog-implementation.md  2025-11-15-removed-validation-utilities.md  2025-11-16-direct-s3-write-design.md  2025-11-16-iceberg-rust-replacement-design.md  2025-11-16-iceberg-rust-replacement-implementation.md  2025-11-16-s3-tables-multi-bucket-design.md  2025-11-16-transaction-commit-design.md  2025-11-16-transaction-commit-implementation.md  2025-11-16-wasm-compatible-icepick-design.md  2025-11-16-wasm-compatible-icepick-implementation.md  2025-11-16-wasm-support-design.md  2025-11-18-append-result-api-design.md  2026-01-17-list-namespaces-vended-credentials-design.md  2026-01-18-commit-command.md
examples/: cleanup_catalog.rs  nested_schema.rs  r2_basic.rs  r2_example.rs  r2_expire_snapshots_dry_run.rs  r2_register.rs  s3_tables_basic.rs  s3_tables_example.rs
otlp2parquet-core/: Cargo.toml
otlp2parquet-core/examples/: generate_demo_parquet.rs
otlp2parquet-core/src/: lib.rs  types.rs
otlp2parquet-core/src/otlp/: mod.rs
otlp2parquet-core/src/otlp/common/: any_value_builder.rs  builder_helpers.rs  field_names.rs  field_numbers.rs  format.rs  json_normalizer.rs  mod.rs
otlp2parquet-core/src/otlp/logs/: format.rs  mod.rs  to_arrow.rs
otlp2parquet-core/src/otlp/metrics/: format.rs  mod.rs  to_arrow.rs
otlp2parquet-core/src/otlp/traces/: format.rs  mod.rs  to_arrow.rs
otlp2parquet-core/src/parquet/: encoding.rs  mod.rs
otlp2parquet-core/src/schema/: logs.rs  metrics.rs  mod.rs  traces.rs
scripts/: enforce_quality.py
src/: arrow_convert.rs  error.rs  lib.rs  main.rs  scan.rs  table.rs  transaction.rs  validation.rs
src/catalog/: catalog_trait.rs  mod.rs  options.rs  r2.rs  rest.rs  rest_catalog.rs  retry.rs  s3_tables.rs
src/catalog/auth/: bearer.rs  mod.rs  sigv4.rs
src/catalog/register/: introspect.rs  mod.rs  types.rs  validate.rs
src/catalog/register/introspect/: tests.rs
src/catalog/rest/: arn.rs  catalog_impl.rs  catalog_trait.rs  client.rs  commit_types.rs  credentials.rs  helpers.rs  mod.rs  types.rs
src/cli/: catalog.rs  mod.rs  output.rs  util.rs
src/cli/commands/: catalog.rs  commit.rs  compact.rs  mod.rs  namespace.rs  snapshot.rs  table.rs
src/cli/commands/commit/: helpers.rs  mod.rs  output.rs
src/commit/: mod.rs  orchestrator.rs  paths.rs
src/compact/: execute.rs  mod.rs  options.rs  plan.rs
src/expr/: bounds_eval.rs  date.rs  mod.rs  parser.rs  partition_eval.rs  predicate.rs
src/io/: file_io.rs  local.rs  mod.rs
src/maintenance/: cleanup.rs  mod.rs  options.rs  plan.rs  tests.rs
src/manifest/: avro.rs  mod.rs  rewriter.rs  schema.rs  writer.rs
src/reader/: manifest.rs  mod.rs
src/reader/manifest/: extract.rs  file.rs  list.rs  mod.rs  parse.rs
src/s3tables/: arn.rs  catalog.rs  client.rs  error.rs  mod.rs  types.rs
src/snapshot_cleanup/: mod.rs
src/spec/: data_file.rs  identifier.rs  metadata.rs  mod.rs  schema.rs  schema_evolution.rs  snapshot.rs  table_creation.rs  types.rs
src/spec/metadata/: tests.rs  types.rs
src/spec/types/: primitive.rs
src/writer/: arrow_parquet.rs  high_level.rs  mod.rs  parquet.rs  partition_extract  partition_extract.rs  partition_transforms.rs  stats.rs  table_writer.rs
src/writer/stats/: bounds.rs
tests/: commit_command.rs  commit_orchestrator_tests.rs  commit_paths_tests.rs  commit_retry_tests.rs  integration_commit_test.rs  manifest_avro_tests.rs  manifest_writer_tests.rs  register_test.rs  test_arrow_convert.rs  test_arrow_to_parquet.rs  test_data_file.rs  test_expr_errors.rs  test_file_io.rs  test_identifiers.rs  test_metadata.rs  test_parquet_writer.rs  test_schema.rs  test_snapshot.rs  test_stats_collector.rs  test_table.rs  test_table_creation.rs  test_table_type.rs  test_table_writer.rs  test_transaction.rs  test_types.rs
tests/common/: mod.rs
