[package]
name = "icepick"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Iceberg
iceberg = "0.7.0"

# HTTP and serialization
reqwest = { version = "0.12", features = ["json"] }
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
percent-encoding = "2.3"

# AWS (non-WASM targets only)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
aws-sigv4 = { version = "1.3.6", default-features = false, features = ["sign-http"] }
aws-credential-types = { version = "1.2", default-features = false }
aws-config = { version = "1.8", default-features = false, features = ["rustls", "behavior-version-latest", "rt-tokio"] }
aws-sdk-sts = { version = "1.55", default-features = false, features = ["rustls", "rt-tokio"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
arrow = { version = "55.2.0", features = ["prettyprint"] }
parquet = "55.2.0"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
dotenvy = "0.15"
percent-encoding = "2.3"
