[package]
name = "icepick"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP and serialization
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
percent-encoding = "2.3"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
opendal = { version = "0.51", default-features = false, features = ["services-memory", "services-s3"] }
apache-avro = "0.21"
arrow = { version = "55.2.0", default-features = false, features = ["prettyprint"] }
parquet = { version = "55.2.0", default-features = false, features = ["arrow"] }
flate2 = "1.1.5"
futures = "0.3"
bytes = "1.0"
tracing = { version = "0.1", features = ["std"] }

# Non-WASM targets (native platforms)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws-sigv4 = { version = "1.3.6", default-features = false, features = ["sign-http"] }
aws-credential-types = { version = "1.2", default-features = false }
aws-config = { version = "1.8", default-features = false, features = ["rustls", "behavior-version-latest", "rt-tokio"] }
aws-sdk-sts = { version = "1.55", default-features = false, features = ["rustls", "rt-tokio"] }
tokio = { version = "1.48.0", default-features = false, features = ["time"] }

# WASM targets
[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
arrow = { version = "55.2.0", features = ["prettyprint"] }
parquet = "55.2.0"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
dotenvy = "0.15"
percent-encoding = "2.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
